--- a/index/servicios.html
+++ b/index/servicios.html
@@ -13,10 +13,9 @@
         <img src="../img/vita.png" alt="" class="logo">
         <nav>
             <ul>
-                <li> <a href="./inicio.html">Inicio</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./doctores.html">Doctores</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+              <li> <a href="../inicio.html">Inicio</a></li>
+              <li><a href="./index/servicios.html">Servicios</a></li>
+              <li><a href="./index/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
@@ -63,10 +62,10 @@
       </div>
     </div>
 
-    <div class="tajeta">
-        <div class="cards">
+    <div class="two">
+      <div class="card">
         <img src="../img/Neurologia.jpg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Neurologia</h1>
           <p>
             Diagnostica y trata las enfermedades y trastornos del sistema nervioso,
@@ -74,9 +73,9 @@
           </p>
         </div>
       </div>
-      <div class="cards">
+      <div class="card">
         <img src="../img/Psiquiatria.jpeg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Psiquiatria </h1>
           <p>
            Se enfoca en el diagnóstico, tratamiento
@@ -84,9 +83,9 @@
           </p>
         </div>
       </div>
-      <div class="cards">
+      <div class="card">
         <img src="../img/Gastroenterologia.jpg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Gastroenterologia</h1>
           <p>
            Se enfoca en el diagnóstico, tratamiento y
@@ -94,9 +93,9 @@
           </p>
         </div>
       </div>
-      <div class="cards">
+      <div class="card">
         <img src="../img/Ortopedista.jpg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Ortopedista</h1>
           <p>
             Se encarga del diagnóstico, tratamiento, rehabilitación y 
@@ -108,7 +107,6 @@
     <footer>
     <p>San Salvador</p>
     <p>Abierto las 24 horas</p>
-
 <p>Siguenos en nuestras redes sociales para estar al dia.</p>
 </footer>
 <footer class="dos">
