--- a/index/contacto.html
+++ b/index/contacto.html
@@ -14,10 +14,9 @@
         <img src="../img/vita.png" alt="" class="logo">
         <nav>
             <ul>
-                <li> <a href="./inicio.html">Inicio</a></li>
-                <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./doctores.html">Doctores</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li> <a href="../inicio.html">Inicio</a></li>
+                <li><a href="./index/servicios.html">Servicios</a></li>
+                <li><a href="./index/contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
