--- a/index/servicios.html
+++ b/index/servicios.html
@@ -13,9 +13,8 @@
         <img src="../img/vita.png" alt="" class="logo">
         <nav>
             <ul>
-                <li> <a href="./inicio.html">Inicio</a></li>
+            <li> <a href="./inicio.html">Inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./doctores.html">Doctores</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
@@ -62,11 +61,10 @@
         </div>
       </div>
     </div>
-
-    <div class="tajeta">
-        <div class="cards">
+    <div class="Tarjetatwo">
+      <div class="card">
         <img src="../img/Neurologia.jpg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Neurologia</h1>
           <p>
             Diagnostica y trata las enfermedades y trastornos del sistema nervioso,
@@ -74,9 +72,9 @@
           </p>
         </div>
       </div>
-      <div class="cards">
+      <div class="card">
         <img src="../img/Psiquiatria.jpeg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Psiquiatria </h1>
           <p>
            Se enfoca en el diagnóstico, tratamiento
@@ -84,9 +82,9 @@
           </p>
         </div>
       </div>
-      <div class="cards">
+      <div class="card">
         <img src="../img/Gastroenterologia.jpg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Gastroenterologia</h1>
           <p>
            Se enfoca en el diagnóstico, tratamiento y
@@ -94,9 +92,9 @@
           </p>
         </div>
       </div>
-      <div class="cards">
+      <div class="card">
         <img src="../img/Ortopedista.jpg" width="500px" />
-        <div class="cards-content">
+        <div class="card-content">
           <h1>Ortopedista</h1>
           <p>
             Se encarga del diagnóstico, tratamiento, rehabilitación y 
@@ -105,14 +103,20 @@
         </div>
       </div>
     </div>
-    <footer>
-    <p>San Salvador</p>
-    <p>Abierto las 24 horas</p>
+<footer>
 
-<p>Siguenos en nuestras redes sociales para estar al dia.</p>
+ <p>San Salvador | Abierto las 24 horas</p>
+ <p>Contáctanos por WhatsApp o en nuestras redes sociales</p>
+ <div>
+        <a href="#" class="text-white mx-2"><i class="bi bi-facebook"> <img src="../img/wasap.png" alt="wasap"></i></a>
+        <a href="https://www.instagram.com/vitalink.sv?igsh=ZmVjMzhkMnJrbTFs" class="text-white mx-2"><i class="bi bi-whatsapp"><img src="../img/ig.png" alt="insta"></i></a>
+        <a href="#" class="text-white mx-2"><i class="bi bi-instagram"> <img src="../img/face.png" alt="face"></i></a>
+      </div>
 </footer>
-<footer class="dos">
+
+<footer class="two">
     <p>© 2025 PTC VitaLink.</p>
 </footer>
+
 </body>
 </html>
