--- a/index/contacto.html
+++ b/index/contacto.html
@@ -16,20 +16,71 @@
             <ul>
                 <li> <a href="./inicio.html">Inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./doctores.html">Doctores</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
-    
-    <footer>
-    <p>San Salvador</p>
-    <p>Abierto las 24 horas</p>
 
-<p>Siguenos en nuestras redes sociales para estar al dia.</p>
+  <section id="inicio" class="text-center p-5 bg-light">
+    <div class="container">
+      <h2 class="fw-bold">Sistema de Gestión de Pacientes</h2>
+    </div>
+  </section>
+
+  <section class="infos">
+    <div class="container">
+      <h3 class="text-center fw-bold mb-4">Contáctanos</h3>
+      <form class="mx-auto" style="max-width: 500px;">
+        <div class="mb-3">
+          <label class="form-label">Nombre Completo:</label>
+          <input type="text" class="form-control" placeholder="Ingresa tu nombre">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Correo Electrónico:</label>
+          <input type="email" class="form-control" placeholder="Ingresa tu correo">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Número de Teléfono:</label>
+          <input type="tel" class="form-control" placeholder="Ingresa tu teléfono">
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <section class="ubi">
+    <div class="container">
+      <h4 class="fw-bold">Nuestra Ubicación</h4>
+      <div class="ratio ratio-16x9 mt-3">
+        <iframe 
+          src="https://www.bing.com/maps/search?mepi=0%7E%7EEmbedded%7EAddress_Link&ty=18&v=2&sV=1&FORM=MPSRPL&q=Ricaldone&ss=id.ypid%3AYN8171x14481457046442812894&ppois=13.72360610961914_-89.20496368408203_Ricaldone_YN8171x14481457046442812894%7E&cp=13.723606%7E-89.204964&lvl=7&style=r" 
+          width="50px" 
+          height="100px" 
+          style="border:0;" 
+          allowfullscreen="" 
+          loading="lazy">
+        </iframe>
+      </div>
+    </div>
+  </section>
+
+   <footer>
+
+ <p>San Salvador | Abierto las 24 horas</p>
+ <p>Contáctanos por WhatsApp o en nuestras redes sociales</p>
+ <div>
+        <a href="#" class="text-white mx-2"><i class="bi bi-facebook"> <img src="../img/wasap.png" alt="wasap"></i></a>
+        <a href="https://www.instagram.com/vitalink.sv?igsh=ZmVjMzhkMnJrbTFs" class="text-white mx-2"><i class="bi bi-whatsapp"><img src="../img/ig.png" alt="insta"></i></a>
+        <a href="#" class="text-white mx-2"><i class="bi bi-instagram"> <img src="../img/face.png" alt="face"></i></a>
+      </div>
 </footer>
-<footer class="dos">
+
+<footer class="two">
     <p>© 2025 PTC VitaLink.</p>
 </footer>
-</body>
-</html>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+ </body>
+ </html>
