--- a/index/inicio.html
+++ b/index/inicio.html
@@ -9,38 +9,97 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
 <body>
-<header>
+ <header>
         <img src="../img/vita.png" alt="" class="logo">
         <nav>
             <ul>
-                <li> <a href="./inicio.html">Inicio</a></li>
+                 <li> <a href="./inicio.html">Inicio</a></li>
                 <li><a href="./servicios.html">Servicios</a></li>
-                <li><a href="./doctores.html">Doctores</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
-<main>
-    <div class="intro">
-<h2>Clinica VitaLink</h2>
-<hr>
-<p>En VitaLink te brindaremos servicios profesionales en las diferentes especialidades de medicina. La digitalización de la forma en que manejamos citas médicas puede hacer que los centros de salud sean más eficientes al ahorrar tiempo y recursos (Organización Mundial de la Salud, 2021). Este servicio de citas en línea mas eficaz y el tiempo en hacerla
-  
-Estas web hara  más fácil la comunicación con los pacientes mediante alertas automáticas y permiten reorganizar las citas rápidamente, lo que ayuda a disminuir las inasistencias y mejorar la eficiencia en las operaciones (FUSADES, 2023).</p>
+ <body>
+      <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
+        <ul class="navbar-nav">
+          <li class="nav-item"><a class="nav-link text-white" href="#inicio">Inicio</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#servicios">Servicios</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="#contacto">Contacto</a></li>
+        </ul>
+      </div>
     </div>
-</main>
-<div>
+  </nav>
 
-</div>    
-<footer>
-    <p>San Salvador</p>
-    <p>Abierto las 24 horas</p>
+  <section id="inicio" class="text-center p-5 bg-light">
+    <div class="container">
+      <h2 class="fw-bold">Clínica VitaLink</h2>
+      <p class="mt-3">
+        En VitaLink te brindaremos servicios profesionales en las diferentes especialidades de medicina. 
+        La digitalización de la forma en que manejamos citas médicas hace que los centros de salud sean más eficientes 
+        al ahorrar tiempo y recursos. Este servicio de citas en línea es más eficaz y reduce tiempos de espera.
+      </p>
+    </div>
+  </section>
 
-<p>Siguenos en nuestras redes sociales para estar al dia.</p>
+      <section>
+        <div id="carrusel" class="carousel slide" data-bs-ride="carousel">
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img src="../img/corazon.jpg" class="d-block w-100" alt="Corazón" width="20px" height="500px">
+            </div>
+            <div class="carousel-item">
+              <img src="../img/personas.jpg" class="d-block w-100" alt="Medicina" width="20px" height="500px">
+            </div>
+               <div class="carousel-item two">
+              <img src="../img/doctor.jpg" class="d-block w-100" alt="doctor" width="20px" height="500px">
+            </div>
+          </div>
+          <button class="carousel-control-prev" type="button" data-bs-target="#carrusel" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#carrusel" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
+        </div>
+      </section>
+
+  <section id="servicios" class="text-center ">
+    <div class="container">
+      <h3 class="fw-bold">Misión</h3>
+      <p class="mt-3">
+        Hacer una transformación digital en el área médica, presentando una solución viable para optimizar 
+        los procesos clínicos y administrativos, facilitando el acceso seguro y rápido a la información, 
+        mejorando la organización y reduciendo el uso de papel.
+      </p>
+    </div>
+  </section>
+
+  <section class="text-center">
+    <div class="container">
+      <h3 class="fw-bold">Visión</h3>
+      <p class="mt-3">
+        Buscamos que los salvadoreños tengan una calidad de servicio clínico más eficiente, que reduzca sus tiempos de espera, 
+        minimice errores administrativos y facilite el trabajo tanto para el personal de salud como para los pacientes.
+      </p>
+    </div>
+  </section>
+
+  <footer>
+
+ <p>San Salvador | Abierto las 24 horas</p>
+ <p>Contáctanos por WhatsApp o en nuestras redes sociales</p>
+ <div>
+        <a href="#" class="text-white mx-2"><i class="bi bi-facebook"> <img src="../img/wasap.png" alt="wasap"></i></a>
+        <a href="https://www.instagram.com/vitalink.sv?igsh=ZmVjMzhkMnJrbTFs" class="text-white mx-2"><i class="bi bi-whatsapp"><img src="../img/ig.png" alt="insta"></i></a>
+        <a href="#" class="text-white mx-2"><i class="bi bi-instagram"> <img src="../img/face.png" alt="face"></i></a>
+      </div>
 </footer>
-<footer class="dos">
+
+<footer class="two">
     <p>© 2025 PTC VitaLink.</p>
 </footer>
-    
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
