--- a/index/contacto.html
+++ b/index/contacto.html
@@ -5,30 +5,86 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contacto</title>
     <link rel="stylesheet" href="../css/contac.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
-</head>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" rel="stylesheet">
 </head>
 <body>
   <header>
         <img src="../img/vita.png" alt="" class="logo">
         <nav>
             <ul>
-                <li> <a href="../inicio.html">Inicio</a></li>
-                <li><a href="./index/servicios.html">Servicios</a></li>
-                <li><a href="./index/contacto.html">Contacto</a></li>
+              <li> <a href="./inicio.html">Inicio</a></li>
+              <li><a href="./servicios.html">Servicios</a></li>
+              <li><a href="./contacto.html">Contactos</a></li>
             </ul>
         </nav>
     </header>
-    
-    <footer>
-    <p>San Salvador</p>
-    <p>Abierto las 24 horas</p>
+    <section id="inicio" class="text-center p-5 bg-light">
+    <div class="container">
+      <h2 class="fw-bold">Sistema de Gestión de Pacientes</h2>
+    </div>
+  </section>
 
-<p>Siguenos en nuestras redes sociales para estar al dia.</p>
-</footer>
-<footer class="dos">
-    <p>© 2025 PTC VitaLink.</p>
-</footer>
+  <section id="contacto" class="fondo">
+    <div class="container">
+      <h3 class="text-center fw-bold mb-4">Contáctanos</h3>
+      <form class="mx-auto" style="max-width: 500px;">
+        <div class="mb-3">
+          <label class="form-label">Nombre Completo:</label>
+          <input type="text" class="form-control" placeholder="Ingresa tu nombre">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Correo Electrónico:</label>
+          <input type="email" class="form-control" placeholder="Ingresa tu correo">
+        </div>
+        <div class="mb-3">
+          <label class="form-label">Número de Teléfono:</label>
+          <input type="tel" class="form-control" placeholder="Ingresa tu teléfono">
+        </div>
+        <div class="text-center">
+          <button type="submit" class="btn btn-primary">Enviar</button>
+        </div>
+      </form>
+    </div>
+  </section>
+
+  <section class="p-5 text-center bg-light">
+  <div class="container">
+    <h4 class="fw-bold">Nuestra Ubicación</h4>
+    <div class="ratio ratio-16x9 mt-3">
+      <iframe
+        src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3875.9261919312225!2d-89.20776702506787!3d13.722918286665985!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8f6330813f89e61f%3A0xcb93eef8cc8c07e1!2sInstituto%20T%C3%A9cnico%20Ricaldone!5e0!3m2!1ses!2ssv!4v1759708989984!5m2!1ses!2ssv" 
+        width="600"
+        height="450"
+        style="border:0;"
+        allowfullscreen=""
+        loading="lazy"
+        referrerpolicy="no-referrer-when-downgrade">
+      </iframe>
+    </div>
+  </div>
+</section>
+
+
+
+  <footer class="color">
+    <div>
+      <p>San Salvador | Abierto las 24 horas</p>
+      <p>Contáctanos por WhatsApp o en nuestras redes sociales</p>
+    </div>
+  </footer>
+
+  <footer class="colores">
+    <div>
+      <p>©2025 VitaLink</p>
+      <div>
+        <a href="#" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-white mx-2"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://www.instagram.com/vitalink.sv?igsh=ZmVjMzhkMnJrbTFs" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
