--- a/index/servicios.html
+++ b/index/servicios.html
@@ -8,14 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
 </head>
-<body>
+<body class="colore">
 <header>
         <img src="../img/vita.png" alt="" class="logo">
         <nav>
             <ul>
-              <li> <a href="../inicio.html">Inicio</a></li>
-              <li><a href="./index/servicios.html">Servicios</a></li>
-              <li><a href="./index/contacto.html">Contacto</a></li>
+              <li> <a href="./inicio.html">Inicio</a></li>
+              <li><a href="./servicios.html">Servicios</a></li>
+              <li><a href="./contacto.html">Contactos</a></li>
             </ul>
         </nav>
     </header>
@@ -104,13 +104,26 @@
         </div>
       </div>
     </div>
-    <footer>
-    <p>San Salvador</p>
-    <p>Abierto las 24 horas</p>
-<p>Siguenos en nuestras redes sociales para estar al dia.</p>
-</footer>
-<footer class="dos">
-    <p>© 2025 PTC VitaLink.</p>
-</footer>
+  
+
+  <footer class="color">
+    <div>
+      <p>San Salvador | Abierto las 24 horas</p>
+      <p>Contáctanos por WhatsApp o en nuestras redes sociales</p>
+    </div>
+  </footer>
+
+  <footer class="colores">
+    <div>
+      <p>©2025 VitaLink</p>
+      <div>
+        <a href="#" class="text-white mx-2"><i class="bi bi-facebook"></i></a>
+        <a href="#" class="text-white mx-2"><i class="bi bi-whatsapp"></i></a>
+        <a href="https://www.instagram.com/vitalink.sv?igsh=ZmVjMzhkMnJrbTFs" class="text-white mx-2"><i class="bi bi-instagram"></i></a>
+      </div>
+    </div>
+  </footer>
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
